--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
     order: 3;
     width: 100%;
     justify-content: center !important;
-    margin-top: 20px;
+    margin-top: 10px;
     padding-bottom: 10px;
   }
   
@@ -35,6 +35,9 @@
   }
 }
 </style>
+
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark" id="topNav">
+  <!-- rest of your header code... -->
 
 <nav class="navbar navbar-expand-lg fixed-top navbar-dark" id="topNav">
   <button
@@ -53,7 +56,7 @@
     <ul class="navbar-nav">
       {% for i in site.urls %}
       <li class="nav-item">
-        
+        <a
           class="nav-link"
           href="{{ site.url }}{{ site.baseurl }}{{ i.url }}"
           >{{ i.text }}</a
@@ -95,3 +98,44 @@
     
     <!-- Search Icon -->
     <!-- <li class="nav-item">
+      <a class="nav-link toggle-search-button" href="#search">
+        <i class="fa fa-search search-icon" aria-hidden="true"></i>
+      </a>
+    </li> -->
+    
+    <!-- Theme Toggle -->
+    <!-- <li class="nav-item">  -->
+      <!-- <input -->
+      <!-- class="nav-link switch theme-toggle" -->
+      <!-- type="checkbox" -->
+        <!-- name="checkbox" -->
+      <!-- /> -->
+    <!-- </li> -->
+  </ul>
+</nav>
+
+<div id="progress-bar"></div>
+
+<!-- Search Form -->
+<div class="search-form-container">
+  <form class="search-form">
+    <fieldset class="search-form__fieldset">
+      <div class="row">
+        <div class="col-lg-8 offset-md-2">
+          <input class="search-form__field" placeholder="Type to Search..." autofocus>
+          <input class="search-form__submit" type="submit" value="search">
+        </div>
+      </div>
+    </fieldset>
+  </form>
+
+  <div class="row">
+    <div class="col-lg-8 offset-md-2 search-results">
+      <div class="card search-results"></div>
+    </div>
+  </div>
+
+  <div class="close-search-button search-form-container__close">
+    <i class="fa fa-times icon"></i>
+  </div>
+</div>
