--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,7 @@ layout: full-width
       <div class="row">
         <!-- Image Column -->
         <div class="col-md-4">
-          <img src="{{site.url}}{{site.baseurl}}/assets/img/TimmyTraverse.png" class="img-fluid rounded"
+          <img src="{{site.url}}{{site.baseurl}}/assets/img/TimmyTraverse.webp" class="img-fluid rounded"
             alt="Timethy Hyman" />
         </div>
 
