--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,7 +31,7 @@ layout: full-width
             Hi, my name is Timethy Hyman.
             I'm a 3rd year <strong>graphics programmer</strong> at <strong>Breda University of Applied
               Sciences</strong>, with a passion for math and learning new things. I have experience in <strong>custom
-              engine development</strong> and <strong>extending the render backend of existing engines</strong> such as **Godot** and **Unreal Engine**.
+              engine development</strong> and <strong>extending the render backend of existing engines</strong> such as <strong>Godot and Unreal Engine</strong>.
           </p>
 
           <p>
