--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,7 +31,7 @@ layout: full-width
             Hi, my name is Timethy Hyman.
             I'm a 3rd year <strong>graphics programmer</strong> at <strong>Breda University of Applied
               Sciences</strong>, with a passion for math and learning new things. I have experience in <strong>custom
-              engine development</strong> and <strong>extending the render backend of existing engines</strong> such as <strong>Godot and Unreal Engine</strong>.
+              engine development</strong> and extending the render backend of existing engines such as <strong>Godot</strong> and <strong>Unreal Engine</strong>.
           </p>
 
           <p>
@@ -40,7 +40,7 @@ layout: full-width
           </p>
 
           <p>
-            🏐 In my free time you can find me coaching the Breda University volleyball team, learning a new piano piece
+            🏐 In my free time you can find me <strong>coaching</strong> the Breda University volleyball team, learning a new <strong>piano</strong> piece
             or working on cool side projects.
           </p>
 
