--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -597,9 +597,9 @@ body:has(.project-background) {
 }
 
 .card strong {
-  color: #e1b57f
+  color: white
 }
 
-.card p {
-  color: #fff;
-}
+// .card p {
+//   color: #fff;
+// }
