--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -45,7 +45,7 @@ layout: full-width
           </p>
 
           <p class="skills-section">
-            Experience:
+            <strong>Experience:</strong>
           </p>
 
           <div class="skills-grid">
