scss syntax fix project container

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -43,9 +43,8 @@
 /* === Project Layout Styles === */
 .project-container {
   max-width: 1800px;
-  margin: 0 
-  
-  o;
+  margin: 0 auto;
+
   padding: 40px 20px;
 }
 
