hero centering fix?

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -6,7 +6,7 @@
     text-align: center;
     background-attachment: fixed;
     background-size: cover;
-    background-position: calc(50% + 30px) center;
+    background-position: center center;
 }
 .jumbotron-btns {
   display: block;
