--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -18,6 +18,9 @@
 }
 </style>
 
+<!-- Add Three.js background -->
+{%- include threejs-hero-background.html -%}
+
 <!-- home hero section -->
 <div class="jumbotron">
   <img class="author-profile-img" src="{{site.url}}{{site.baseurl}}/assets/img/{{site.author_logo}}" />
