--- a/_includes/threejs-hero-background.html
+++ b/_includes/threejs-hero-background.html
@@ -192,7 +192,7 @@
       dustColors[i3 + 1] = 0.7;
       dustColors[i3 + 2] = 0.8;
       
-      dustSizes[i] = Math.random() * 2 + 0.5;
+      dustSizes[i] = Math.random() + 0.3;
     }
     
     dustGeo.setAttribute('position', new THREE.BufferAttribute(dustPositions, 3));
