--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -340,8 +340,8 @@ html, body {
   }
 
   &[data-tag="custom engine"], &[data-tag="engine"] {
-    background: rgba(176, 159, 238, 0.384);
-    color: #601be0;
+    background: rgba(102, 9, 223, 0.384);
+    color: #ac84f5;
     &:hover, &.active { background: #052874; color: white; }
   }
 
