--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -341,7 +341,7 @@ html, body {
 
   &[data-tag="custom engine"], &[data-tag="engine"] {
     background: rgba(102, 9, 223, 0.384);
-    color: #ac84f5;
+    color: #d2baff;
     &:hover, &.active { background: #052874; color: white; }
   }
 
