syntax fix i to I

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,7 +36,7 @@ layout: full-width
             </p>
 
             <p>
-              💼 Currently working at <strong>Traverse Research</strong>, where i work in the field of <strong>Computer
+              💼 Currently working at <strong>Traverse Research</strong>, where I work in the field of <strong>Computer
                 Graphics</strong> to research the latest rendering techniques.
             </p>
 
